ders_25042022 dosyalari eklendi

--- a/ders_25042022.ipynb
+++ b/ders_25042022.ipynb
@@ -509,6 +509,86 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Rastgele bir metinde küçük harfleri büyüten , büyük harfleri küçülterek daha sonrasında bu harflerin her birini bir dictionary oluşturarak ona aktaran program"
+      ],
+      "metadata": {
+        "id": "eQlm32zpH_iC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "metin=\"kjdgagğÖGRBLDAFSMALDSömskfmdlskfm\"\n",
+        "metin1 =\"\"\n",
+        "for i in metin:\n",
+        "  if i.islower():\n",
+        "    metin1 += i.upper()\n",
+        "  else:\n",
+        "    metin1 += i.lower()\n",
+        "dict9={(i+1):str(metin1[i]) for i in range(0, len(metin1))}\n",
+        "print(dict9)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yE-RX5vAH9HR",
+        "outputId": "709e2e3c-daf9-4086-a06f-3af2bcaf1e30"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1: 'K', 2: 'J', 3: 'D', 4: 'G', 5: 'A', 6: 'G', 7: 'Ğ', 8: 'ö', 9: 'g', 10: 'r', 11: 'b', 12: 'l', 13: 'd', 14: 'a', 15: 'f', 16: 's', 17: 'm', 18: 'a', 19: 'l', 20: 'd', 21: 's', 22: 'Ö', 23: 'M', 24: 'S', 25: 'K', 26: 'F', 27: 'M', 28: 'D', 29: 'L', 30: 'S', 31: 'K', 32: 'F', 33: 'M'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Rastgele bir metinden dictionary oluşturup tek sayılara karşılık 1, çift sayılara karşılık 2 yazdıran program"
+      ],
+      "metadata": {
+        "id": "O4bwdfcFHLu0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Dictionary Comprehension\n",
+        "squares = {x:i for x in range(1,16) }\n",
+        "for i in squares:\n",
+        "  if i % 2 == 0: \n",
+        "    squares.update({i: 2})\n",
+        "  else:\n",
+        "    squares.update({i: 1})\n",
+        "\n",
+        "print(squares)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HUc2bJE4HMZU",
+        "outputId": "557a0d7b-f61f-47f2-806c-d4d8d0a6c7f8"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1: 1, 2: 2, 3: 1, 4: 2, 5: 1, 6: 2, 7: 1, 8: 2, 9: 1, 10: 2, 11: 1, 12: 2, 13: 1, 14: 2, 15: 1}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **SET**"
       ],
       "metadata": {
@@ -883,7 +963,7 @@
       "metadata": {
         "id": "hMOW2H19hdri"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -914,7 +994,7 @@
         "id": "9T5qvGcRIIui",
         "outputId": "f87fe084-c3ad-4c06-f801-8f9df5caa690"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
