ders_25042022 dosyalari eklendi

--- a/ders_25042022.ipynb
+++ b/ders_25042022.ipynb
@@ -535,7 +535,7 @@
         "id": "yE-RX5vAH9HR",
         "outputId": "709e2e3c-daf9-4086-a06f-3af2bcaf1e30"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -549,7 +549,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Rastgele bir metinden dictionary oluşturup tek sayılara karşılık 1, çift sayılara karşılık 2 yazdıran program"
+        "Belirlenen aralıktan sayıları seçerek ve teklerin karşısına 1, çiflerin karşısına 2 yazması koşuluyla bir dictionary oluşturan program"
       ],
       "metadata": {
         "id": "O4bwdfcFHLu0"
@@ -575,7 +575,7 @@
         "id": "HUc2bJE4HMZU",
         "outputId": "557a0d7b-f61f-47f2-806c-d4d8d0a6c7f8"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
